Skip to content

3.0 regression: MKV active-by-default subtitles no longer automatically selected

Originally posted here as I was trying to figure out what was going on:


The breakage happened in d61c514, with this comment "also changes sub-language to "none", fixing the none/any logic".

I'm not sure what exactly was fixed, but as a side-effect, it means that MKV subtitles with the "default" flag set are no longer active by default.

I'm guessing that simply reverting this change (specifically, the change to src/libvlc-module.c) is the wrong way to correct this, but it has given me a working VLC. I would very much appreciate it if someone could ascertain why this no longer works with the "none" default.

Testcase

$ mkvpropedit filename.mkv --edit track:s1 --set flag-default=1
Edited by Filip Roséen
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information