input: es_out: fix forced by demux es selection (fix #17529)